# pleiades-worker

./: .env  .env.local  .gitignore  Cargo.toml  README.md  bench.bash  bench_o.bash  callgrind.out.1347393  config.yml  run_bench-24.bash  run_bench-counter.bash  run_bench.bash  run_bench2.bash  run_bench_o.bash  run_bench_yobi.bash  run_generator.bash  run_worker.bash
auto/: run_bench.bash  run_bench_yobi.bash  run_generator_o.bash  run_simple_generator.bash
benches/: simple_worker  simple_worker.rs
config/: blocking-2.yml  blocking-seq.yml  blocking.yml  cooperative-10.yml  cooperative-2.yml  cooperative-3.yml  cooperative-4.yml  cooperative-6.yml  cooperative.yml  overload.yml  overloaded-110.yml  overloaded-2.yml  overloaded-44.yml  overloaded-66.yml  overloaded-88.yml  overloaded.yml
config-12/: cooperative-8-2.yml  cooperative-8.yml  overloaded-100.yml
config-20/: cooperative-8 copy.yml  overloaded-80.yml
config-20-counter/: blocking.yml  cooperative-6.yml
config-24/: blocking.yml  overloaded-80.yml
config-limited/: cooperative-16.yml  cooperative-6-0.yml  cooperative-6.yml  overloaded-100.yml  overloaded-60.yml
contractor/: Cargo.toml
cpu_usage/: 2025-0110-075200.csv  2025-0110-075750.csv  2025-0110-080008.csv  2025-0110-080109.csv
examples/: job_generator.rs  job_generator2.rs  job_generator3.rs  job_generator_b.rs  job_generator_co.rs  job_generator_o.rs  simple_job_generator.rs  simple_worker.rs  thread_time.rs  vector.rs
metrics/: 2024_1224_234400.csv  2024_1224_234708.csv  2024_1224_234951.csv  2024_1225_115403.csv  2024_1225_115425.csv  2024_1225_120403.csv  2024_1225_123928.csv  2024_1225_124027.csv  2024_1225_124052.csv  2024_1225_124807.csv  2024_1225_150135.csv  2024_1225_150245.csv  2024_1225_170504.csv  2024_1225_170612.csv  2024_1225_170714.csv  2024_1225_170729.csv  2024_1225_170820.csv  2024_1225_170841.csv  (+19 more)
(+838 files in other folders)
