[package]
name = "pleiades-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
boa_engine = "0.19"
boa_gc = "0.19.1"
boa_runtime = "0.19.1"
bytes = "1.8"
pleiades-api = { git = "https://git.dolylab.cc/mec/pleiades-rs.git", branch = "dev"}
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
criterion = "0.5.1"
