[package]
name = "pleiades-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
boa_engine = "0.20"
boa_gc = "0.20"
boa_runtime = "0.20"
bytes = "1.8"
pleiades-api = { git = "https://git.dolylab.cc/mec/pleiades-rs.git", branch = "dev" }
pleiades = { git = "https://git.dolylab.cc/mec/pleiades-rs.git", branch = "dev" }
tokio = { version = "1.0", features = ["full"] }
pollster = "0.4.0"
cpu-time = "1.0.0"
reqwest = "0.12.9"
tracing = "0.1.41"
dotenvy = "0.15.7"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde = "1.0.216"
serde_json = "1.0.134"
chrono = "0.4.39"
serde_yaml = "0.9.34"
clap = { version = "4.5.23", features = ["derive"] }
duration-str = "0.11.3"
core_affinity = "0.8.1"

[dev-dependencies]
criterion = "0.5.1"
